# dasmixer

./: .gitignore  AGENTS.md  APPLY_PATCH_MANUAL.md  CHANGELOG_2026_01_30.md  FILEPICKER_FIX.md  LICENSE.txt  QUICKSTART_STAGE3_2.md  README.md  SESSION_SUMMARY_2026_01_30.md  STAGE3_2_STATUS.md  STAGE3_2_TODO.md  STAGE3_3_ENHANCEMENTS.md  STAGE3_3_PROTEIN_MAPPING.md  apply_project_patch.py  check_ppm.py  dasmixer.spec  main.py  processed_spectra_files.txt  pyproject.toml  temp_set_pref.py  test_refactored_project.py  test_stage1.py  test_stage3_3.py  try_plgs_seq.py
TEST_DATA/: MQ_CNT_014A.csv  PN2_CNT_014A.csv
api/: config.py
api/calculations/peptides/: matching.py  protein_map.py
api/calculations/ppm/: dataclasses.py  seqfixer.py
api/calculations/proteins/: lfq.py
api/calculations/spectra/: coverage_worker.py  identification_processor.py
api/inputs/: __init__.py  base.py
api/inputs/peptides/: MQ_Evidences.py  PowerNovo2.py  __init__.py  base.py  table_importer.py
api/inputs/proteins/: __init__.py  fasta.py
api/inputs/spectra/: __init__.py  mgf.py
api/peptides/: matching.py
api/project/: dataclasses.py  project.py  project_patch.py  schema.py
api/project/core/: base.py  lifecycle.py
api/project/mixins/: __init__.py  fast_ident_match_mixin.py  identification_mixin.py  peptide_mixin.py  plot_mixin.py  protein_mixin.py  report_mixin.py  sample_mixin.py  spectra_mixin.py  subset_mixin.py  tool_mixin.py
api/proteins/: lfq.py  map_identifications.py
api/proteins/sempai/: __init__.py  sample.py  utils.py
api/reporting/: __init__.py  base.py
api/reporting/reports/: __init__.py  sample_report.py  toolmatch_report.py  volcano_report.py
api/spectra/: coverage_worker.py  ion_match.py  plot_flow.py  plot_matches.py
cli/commands/: __init__.py  import_data.py  project.py  subset.py
dasmixer/: __init__.py  __main__.py  main.py  versions.py
dasmixer/api/: __init__.py  config.py  plugin_loader.py
dasmixer/cli/: __init__.py
dasmixer/gui/: app.py  utils.py
dasmixer/utils/: __init__.py  ppm.py  seek_files.py  seqfixer_utils.py  show_pathways.py
docs/: MASTER_SPEC.md  PROJECT_ER.mermaid  architecture.mermaid  workflow.mermaid
docs/api/: DATACLASSES.md  PROJECT_API.md  README.md  SPECTRA_PROCESSING.md  modules.md
docs/changes/: PHASE3_TABS_FIX.md  SESSION_2026_01_30_DELETION_AND_GROUP_CHANGE.md
docs/gui/: architecture.md
docs/obsolete/: BASE_CLASSES.md  DELETION_API.md  FLET_CONTAINER_PATTERN.md  FLET_FIXES_FINAL.md  IMPORTERS.md  IMPORT_FUNCTIONALITY_COMPLETE.md  LIFECYCLE_FIX.md  MASTER_SPEC.md  PHASE3_FINAL_FIX_SUMMARY.md  PROJECT_API_UPDATES.md  QUICK_START_GUIDE.md  STAGE3_1_PROJECT_CHANGES.md  STAGE3_2_CHANGELOG.md  STAGE3_2_COMPLETE.md  STAGE3_2_FINAL_REPORT.md  STAGE3_2_SUMMARY.md  STAGE3_3_COMPLETE.md  STAGE3_3_FINAL_SUMMARY.md  STAGE3_3_PROTEIN_MAPPING.md  STAGE3_TOOLS_UI_COMPLETE.md  STAGE3_UI_COMPLETE.md  STAGE4_1_MODULAR_REFACTOR.md  STAGE4_1_PROGRESS.md  STAGE4_1_STATUS.md  STAGE5_EXPORT_UPDATE.md  STAGE5_IMPLEMENTATION.md  batch_processing.md
docs/other/: FLET_API_FIXES.md  STAGE3_3_ENHANCEMENTS.md  STAGE3_3_QUICKSTART.md  STAGE3_FINAL_COMPLETE.md  STAGE3_FLET_MIGRATION_REPORT.md  STAGE4_1_FINAL_SUMMARY.md  TEST_COMMANDS.sh
docs/project/: CHANGELOG_2026-02-05.md  FLET_API_CHECKLIST.md  FLET_API_MIGRATION.md  MASTER_SPEC_NEW.md
docs/review/: SELECTION_CRITERION.md  code_review.md
docs/technical/: STAGE3_1_CHANGES.md  STAGE3_UI_ARCHITECTURE.md
docs/user/: IMPORT_SPECTRA_GUIDE.md  MANAGING_GROUPS_AND_TOOLS.md  PPM_AND_PTM.md  reports.md  workflow.md
gui/: __init__.py  app.py
gui/components/: __init__.py  base_plot_view.py  base_table_and_plot_view.py  base_table_view.py  plotly_viewer.py  progress_dialog.py
gui/views/: __init__.py  project_view.py  start_view.py
rthooks/: rthook_logfile.py
utils/: lic.py  logger.py  mq_evidences.py  ppm.py  seqfixer_utils.py
(+265 files in other folders)
