[project]
name = "dasmixer"
version = "0.1.0"
description = ""
authors = [
    {name = "gluck",email = "glucksistemi@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0, >=3.11"
dependencies = [
    "flet (>=0.80.2,<0.81.0)",
    "typer (>=0.21.1,<0.22.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "kaleido (>=1.2.0,<2.0.0)",
    "pyteomics (>=4.7.5,<5.0.0)",
    "peptacular (>=2.5.1,<3.0.0)",
    "uniprot-meta-tool (>=0.2.1,<0.3.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "npysearch (>=1.3.1,<2.0.0)",
    "parse (>=1.20.2,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "aiocsv (>=1.4.0,<2.0.0)",
    "pywebview[gtk] (>=6.1,<7.0) ; sys_platform == \"linux\"",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
